# elastic-tables

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml  python-publish.yml
doc/: development.md  future_work.md  implementation.md  notes.md  todo.md  user_manual.md
src/: elastic_tabs.py
src/elastic_tabs/: __init__.py  block.py  block_splitter.py  chunk_splitter.py  filter.py  io.py  iterable.py  line_splitter.py  parser.py  render.py  renderer.py  stream_filter.py  table.py  text.py
src/tab_les/: io.py
tests/: test_block_splitter.py  test_chunk_splitter.py  test_elastic_tabs.py  test_filter.py  test_io.py  test_line_splitter.py  test_line_splitting_separators.py  test_line_splitting_unterminated.py  test_parser.py  test_render.py  test_renderer.py  test_stdio.py  test_stream_filter.py  test_table.py  test_text.py
tests/cli/: test_cli.py
tests/data/: __init__.py  align-numeric_expected_no.txt  align-numeric_expected_yes.txt  align-numeric_in.txt  align-space_expected_no.txt  align-space_expected_yes.txt  align-space_in.txt  column-separator_pipe_expected.txt  column-separator_pipe_in.txt  line-break_lf_expected.txt  line-break_lf_in.txt  test1_expected.txt  test1_in.txt
tests/filter/: test_filter.py  test_filter_file.py  test_stream_filter.py
tests/misc/: test_line_splitting_separators.py  test_line_splitting_unterminated.py
tests/model/: test_cell.py  test_column.py  test_row.py  test_table.py
tests/old/: test_chunk_splitter.py  test_filter.py  test_parser.py  test_renderer.py  test_stream_filter.py
(+54 files in other folders)
